--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <mat-sidenav-container class="example-container" [hasBackdrop]="true">
   <mat-sidenav #sidenav mode="over" [(opened)]="opened" class="example-sidenav">
     <mat-nav-list>
-      <a mat-list-item *ngFor="let item of menuItems">
+      <!-- <a mat-list-item *ngFor="let item of menuItems"> -->
+      <a mat-list-item *ngFor="let item of menuItems" [routerLink]="['/' + item.label.toLowerCase()]">
         <mat-icon>{{ item.icon }}</mat-icon>
         <span>{{ item.label }}</span>
       </a>
@@ -23,8 +24,7 @@
     </mat-toolbar>
 
     <div class="example-content">
-      <p>Content area goes here.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
